# ai-os

./: .codegraph  .dockerignore  .gitignore  Cargo.toml  README.md
.omo/run-continuation/: ses_0e28b7925ffeqJnWXqJ6S3QxmC.json  ses_0e2b9cb08ffeOg4tqXbLqYa9Wa.json
.swarm/: hnsw.index  hnsw.metadata.json  memory.db  schema.sql
adr/: ADR-001.md
constitution/: approval.md  architecture.md  dependencies.md  deployment.md  security.md  testing.md
dashboard/: app.js  index.html  style.css
docker/: .dockerignore  Dockerfile.intelligence  Dockerfile.kernel  compose.override.yml  docker-compose.yml
docs/: 00-vision.md  01-philosophy-and-terminology.md  02-architecture-overview.md  03-project-kernel.md  04-project-intelligence-layer.md  05-goal-decomposer.md  06-worker-runtime.md  07-state-machine.md  08-event-bus.md  09-execution-manifest.md  10-interface-registry.md  11-project-constitution.md  12-adr-system.md  13-ownership-model.md  14-permission-engine.md  15-scheduler.md  16-review-pipeline.md  17-architecture-guardian.md  18-plugin-sdk.md  19-api-specification.md  20-json-schemas.md  21-repository-layout.md  22-development-roadmap.md  23-testing-strategy.md  24-security-model.md  25-performance-benchmarks.md  26-deployment-guide.md  27-contributor-guide.md  28-rfc-process.md  29-future-research.md  README.md
examples/: README.md
examples/cross-domain/: README.md  domains.yaml  objective_cross.json  run.sh
examples/quick-start/: README.md  config.toml  objective.json  run.sh
intelligence/: __init__.py  kernel_client.py  main.py  pyproject.toml
intelligence/adr_engine/: __init__.py  engine.py  models.py
intelligence/api/: __init__.py  models.py  routes.py  state.py
intelligence/constitution_engine/: __init__.py  engine.py  models.py
intelligence/dependency_graph/: __init__.py  engine.py  models.py
intelligence/indexer/: __init__.py  indexer.py  models.py
intelligence/semantic_search/: __init__.py  models.py  searcher.py
intelligence/symbol_graph/: __init__.py  graph.py  models.py
kernel/: Cargo.toml
kernel/src/: api.rs  config.rs  coordinator.rs  dashboard.rs  diff_applier.rs  event_bus.rs  execution_engine.rs  guardian.rs  interface_registry.rs  lib.rs  logging.rs  main.rs  manifest.rs  objective.rs  ownership.rs  permission.rs  pil_client.rs  review.rs  scheduler.rs  state_machine.rs  test.rs
kernel/tests/: integration_test.rs  pil_roundtrip_test.rs
memory/: project-context.md
planner/: __init__.py  admission.py  decomposer.py  llm.py  main.py  models.py
schemas/: event.json  manifest.json  objective.json  verdict.json  worker-output.json
sdk/: Cargo.toml
sdk/src/: example_plugin.rs  lib.rs  (+1 more)
tests/: test_admission.py  test_constitution_engine.py  test_dependency_graph.py  test_intelligence_api.py  test_kernel_client.py  test_planner.py
workers/ai-worker/: Cargo.toml  test-manifest.json
workers/ai-worker/src/: lib.rs  main.rs
