[package]
name = "ai-os-kernel"
version = "0.1.0"
edition = "2024"
description = "AI-OS Kernel — deterministic orchestrator for AI-assisted engineering"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / API
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Git operations
git2 = "0.20"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Schema generation & validation
  # Schema generation & validation
  schemars = { version = "0.8.21", features = ["uuid", "chrono"] }
  validator = { version = "0.20", features = ["derive"] }

# Concurrency
dashmap = "6"

# File watching
notify = "7"

# Synchronization
parking_lot = "0.12"

# Configuration
toml = "0.8"
serde_yaml = "0.9"
globset = "0.4"

# Hash-chain (audit log)
sha2 = "0.10"

# Metrics (lightweight)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
tempfile = "3"
assert_matches = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serial_test = "3"
