[package]
name = "ai-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI-OS stateless worker process — executes an Execution Manifest and produces structured WorkerOutput"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

[lib]
name = "ai_worker"
path = "src/lib.rs"

[[bin]]
name = "ai-worker"
path = "src/main.rs"
